fix(gallery): Fix view more button on mobile - OEL-1381

--- a/src/themes/default/src/scss/_gallery.scss
+++ b/src/themes/default/src/scss/_gallery.scss
@@ -85,6 +85,13 @@
     }
   }
 
+  .bcl-gallery__mobile-view-more > span {
+    display: block;
+    & * {
+      pointer-events: none;
+    }
+  }
+
   .carousel {
     height: 100%;
     width: 100%;
